--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,13 +136,23 @@ section#people {
 section#people p {
     font-size: 1.5em;
 }
+
+section#pre-footer {
+    background: #222222;
+    padding: 1.2em 0;
+    font-size: 2em;
+    color: #fff;
+}
+
 footer {
+    padding: 6em 0;
+    color: #aaa;
+    height: 80vh;
     background: url(../img/bg-footer.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     padding: 6em 0;
-    color: #aaa;
 }
 
 /* carousel */
